Minor Fix for Login Screen
Finally fixed that weird padding issue with the scrollbar

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -8,11 +8,12 @@
 
 .left-side {
     float: left; 
+    overflow: hidden;
+    margin: 0;
 }
 
 .img-nappy {
     min-width: 100%;
-    height: 100vh;
     min-height: 100%;
 }
 
